--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Quiz - One Big, Ugly Form</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <title>Awesome checkout form</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
+  <app><app>
   <header>
     <span class="company-name">🂡 Cam's Company 🂡</span>
     <span class="company-page">Checkout Page</span>
